packages/rust-optimizer/core/src/snapshots/qwik_core__test__should_split_spread_props_with_additional_prop4.snap
---
source: packages/rust-optimizer/core/src/test.rs
expression: output
---
==INPUT==


		import { component$ } from '@qwik.dev/core';

		export default component$((props: any) => {
			return <button {...props} onClick$={() => props.onClick$()}></button>;
		});
		
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGE,6BAAe,2CAEZ\"}")
============================= test.tsx_test_component_button_q_e_click_qwSL5gM03T4.js (ENTRY POINT)==

export const test_component_button_q_e_click_qwSL5gM03T4 = (_, _1, props)=>props.onClick$();


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"2DAIuC,gBAAM,MAAM,QAAQ\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_button_q_e_click_qwSL5gM03T4",
  "entry": null,
  "displayName": "test.tsx_test_component_button_q_e_click",
  "hash": "qwSL5gM03T4",
  "canonicalFilename": "test.tsx_test_component_button_q_e_click_qwSL5gM03T4",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    135,
    157
  ],
  "paramNames": [
    "_",
    "_1",
    "props"
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_button_q_e_click_qwSL5gM03T4 = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_button_q_e_click_qwSL5gM03T4"), "test_component_button_q_e_click_qwSL5gM03T4").m();
//
export const test_component_LUXeXe0DQrg = (props)=>{
    return /*#__PURE__*/ _jsxSplit("button", {
        ..._getVarProps(props),
        "q-e:click": q_test_component_button_q_e_click_qwSL5gM03T4,
        "q:p": props
    }, _getConstProps(props), null, 4, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;0CAG4B,CAAC;IAC1B,qBAAO,UAAC;wBAAW;QAAO,WAAQ;;sBAAf;AACpB\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    173
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==

[]
